<resources>
    <string name="app_name">ExpensesManager2</string>
    <string name="add_activity_header">ADD OPERATION</string>
    <string name="cost">Cost</string>
    <string name="title">Title</string>
    <string name="add">ADD</string>
    <string name="edit_activity_header">EDIT OPERATION</string>
    <string name="edit">EDIT</string>
    <string name="category">CATEGORY</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="balance">BALANCE</string>
    <string name="history">HISTORY</string>
    <string name="starting_balance_header">WELCOME!!</string>
    <string name="starting_balance_hint">Enter starting balance</string>
    <string name="list">SHOPPING LIST</string>
    <string name="product_amount">Product amount</string>
    <string name="unit">Unit</string>
    <string name="name">Name</string>
    <string name="execute">EXECUTE</string>
    <string name="shopping_list">SHOPPING LIST</string>
    <string name="nameUPP">NAME</string>
    <string name="unitUPP">UNIT</string>
    <string name="regularUPP">REGULAR</string>
    <string name="delete">DELETE</string>
    <string name="manage_products">MANAGE PRODUCTS</string>

    <string-array name="Categories">
        <item>Cat1</item>
        <item>Cat2</item>
    </string-array>
</resources>