<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:text="@string/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCost"
            android:text="@string/cost"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCategory"
            android:text="@string/category"
            android:textSize="12sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/delete"
        android:layout_gravity="center_vertical"/>


</LinearLayout>